refactor get api for powerbank
